; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ioc3-eth.c_nic_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ioc3-eth.c_nic_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioc3 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ioc3*)* @nic_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nic_wait(%struct.ioc3* %0) #0 {
  %2 = alloca %struct.ioc3*, align 8
  %3 = alloca i32, align 4
  store %struct.ioc3* %0, %struct.ioc3** %2, align 8
  br label %4

4:                                                ; preds = %6, %1
  %5 = call i32 (...) @ioc3_r_mcr()
  store i32 %5, i32* %3, align 4
  br label %6

6:                                                ; preds = %4
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, 2
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  br i1 %10, label %4, label %11

11:                                               ; preds = %6
  %12 = load i32, i32* %3, align 4
  %13 = and i32 %12, 1
  ret i32 %13
}

declare dso_local i32 @ioc3_r_mcr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
